<resources>
    <string name="app_name">AdminApp</string>
    <string name="title_stuff">Stuff</string>
    <string name="title_auction">Auction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_stuff_name">Stuff Name</string>
    <string name="detail_prduct">Proactively pontificate functionalized intellectual capital with next-generation expertise. Professionally grow efficient ideas without reliable applications. Objectively coordinate integrated infrastructures for interactive action items. Holisticly transition impactful content without standardized.</string>
    <string name="date_label">19-12-12</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">DELETE</string>
    <string name="label_harga">Rp.</string>
    <string name="label_price">Price</string>
    <string name="content_descriptin">stuff_image</string>
    <string name="date_hint">yyyy-mm-dd</string>
    <string name="stuff_name_label">Stuff Name</string>
    <string name="stuff_price_label">Stuff Price</string>
    <string name="description_label">Description</string>
    <string name="add_label">Add</string>
    <string name="update_label">Update</string>
    <string name="description_hint">Description</string>
    <string name="stuff_price_hint">Stuff Price</string>
</resources>
